--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 	height: 200px;
 	background: #F2F5A9;
 	text-align: center;
-	vertical-align: middle;
 
 }
 #caja2{
@@ -44,14 +43,23 @@
 }
 #caja5{
 	width: 30%;
-	height: 800px;
+	height: 400px;
 	background: #A9A9F5;
 	float: 	right;
 	text-align: center;
 }
-#caja6{
-	width: 100%;
-	height: 300px;
-	background: #F5A9F2;
-	text-align: center;
+#pollo{
+	height: 150px;
+    line-height: 150px;
+    text-align: center;
+}
+#boneless{
+	height: 150px;
+    line-height: 150px;
+    text-align: center;
+}
+#empanizado{
+	height: 150px;
+    line-height: 150px;
+    text-align: center;
 }
